zoom picture added

--- a/PCHUBStore/Views/Partial/Laptops/LaptopsPartial.cshtml
+++ b/PCHUBStore/Views/Partial/Laptops/LaptopsPartial.cshtml
@@ -48,11 +48,11 @@
 
             </ul>
 
-            <div class="text-center container" style="visibility: hidden">
-
-
-                <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px;" alt="Alternate Text" />
-                <button class="btn-success">Add To Cart</button>
+            <div class="container" style="visibility: hidden">
+                <div class="row">
+                    <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px;" alt="Alternate Text" />
+                    <button class="btn btn-success">Add To Cart</button>
+                </div>
 
             </div>
 
