--- a/PCHUBStore/Views/Partial/Laptops/LaptopFiltersPartial.cshtml
+++ b/PCHUBStore/Views/Partial/Laptops/LaptopFiltersPartial.cshtml
@@ -33,20 +33,40 @@
         <div class="col-12 text-center" style="margin-bottom: 10px">
             <p class="border-bottom-success" style="font-family: sans-serif; color: black; font-size: 20px">Price</p>
         </div>
-        <div class="col-12" style="margin-bottom: 20px">
-            <label for="MinPrice">Minimum Price</label>
-            <input type="number" style="width: inherit" name="MinPrice" value="500" />
 
-        </div>
-        <div class="col-12" style="margin-bottom: 20px">
-            <label for="MaxPrice">Maximum Price</label>
-            <input type="number" style="width: inherit" name="MaxPrice" value="10000" />
-        </div>
+        @if (Model.Any(x => x.ViewSubCategoryName == "Price"))
+        {
+            var priceCategory = Model.FirstOrDefault(x => x.ViewSubCategoryName == "Price");
+            var minPrice = priceCategory.Filters.FirstOrDefault(x => x.Name == "MinPrice");
+            var maxPrice = priceCategory.Filters.FirstOrDefault(x => x.Name == "MaxPrice");
+
+            <div class="col-12" style="margin-bottom: 20px">
+                <label for="MinPrice">Minimum Price</label>
+                <input type="number" style="width: inherit" name="MinPrice" value="@minPrice.Value" />
+            </div>
+            <div class="col-12" style="margin-bottom: 20px">
+                <label for="MaxPrice">Maximum Price</label>
+                <input type="number" style="width: inherit" name="MaxPrice" value="@maxPrice.Value" />
+            </div>
+        }
+        else
+        {
+            <div class="col-12" style="margin-bottom: 20px">
+                <label for="MinPrice">Minimum Price</label>
+                <input type="number" style="width: inherit" name="MinPrice" value="400" />
+            </div>
+            <div class="col-12" style="margin-bottom: 20px">
+                <label for="MaxPrice">Maximum Price</label>
+                <input type="number" style="width: inherit" name="MaxPrice" value="10000" />
+            </div>
+        }
+
+
 
     </div>
     <div class="row" style="margin-top: 20px">
 
-        @foreach (var category in Model.Where(x => x.ViewSubCategoryName != "OrderBy").ToList())
+        @foreach (var category in Model.Where(x => x.ViewSubCategoryName != "OrderBy" && x.ViewSubCategoryName != "Price").ToList())
         {
             <div class="col-12 text-center" style="margin-bottom: 10px">
                 <p class="border-bottom-success" style="font-family: sans-serif; color: black; font-size: 20px">@category.ViewSubCategoryName</p>
@@ -76,10 +96,7 @@
 
             <script>
                 function changeHandler() {
-                    console.log("inside");
-
                     document.getElementById('btn').click();
-
                 }
             </script>
         }
