--- a/PCHUBStore/Views/Products/Laptops.cshtml
+++ b/PCHUBStore/Views/Products/Laptops.cshtml
@@ -40,11 +40,11 @@ model="Model.Laptops"
     </div>
 </div>
 
-<div class="container">
+<div class="container" style="margin-left: 2em; margin-right:2em">
     <partial name="~/Views/Partial/Pagination.cshtml" model="Model" />
 </div>
 
-<div style="margin-left: 50px; margin-right:50px" class="row">
+<div style="margin-left: 2em; margin-right:2em" class="row">
     <div class="col-sm-12 col-md-12 col-lg-2">
         <partial name="~/Views/Partial/Laptops/LaptopFiltersPartial.cshtml" model="Model.FilterCategory" />
     </div>
