--- a/PCHUBStore/Views/Partial/Laptops/LaptopsPartial.cshtml
+++ b/PCHUBStore/Views/Partial/Laptops/LaptopsPartial.cshtml
@@ -31,8 +31,8 @@
     {
     <div class="col-lg-3 col-sm-12 col-md-6 laptopsJs" style="background-color:white; border: solid; border-width: 2px; border-color: white">
             <div class="text-center">
-            <a href="Products/Laptop/@product.Id" style="text-decoration:none; font-size: 17px; color:black" class="text-center">
-                <img style="width: inherit; height: 203px" src="@product.PictureUrl" alt="Alternate Text" />
+            <a href="Products/Laptop/@product.Id" style="text-decoration:none; width: inherit; font-size: 17px; color:black" class="text-center">
+                <img style="width: inherit; height: 5cm" src="@product.PictureUrl" alt="Alternate Text" />
             </a>
             </div>
             <div class="text-center m-2" style="word-break: break-all; color: black; font-size: 30px; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: darkslateblue">
