User profile added

--- a/PCHUBStore/Views/Products/Laptop.cshtml
+++ b/PCHUBStore/Views/Products/Laptop.cshtml
@@ -16,7 +16,7 @@
 ">
                 @foreach (var pic in Model.Pictures)
                 {
-                    <div class="col-2">
+                    <div class="col-2 miniPictures" style="border: solid; border-color: white; border-width: 1px; z-index: 200;">
                         <img src="@pic" alt="Description Pictures" style="width: inherit;" />
                     </div>
                 }
