--- a/PCHUBStore/Views/Shared/_LoginPartial.cshtml
+++ b/PCHUBStore/Views/Shared/_LoginPartial.cshtml
@@ -5,36 +5,23 @@
 @inject UserManager<User> UserManager
 
     <ul class="navbar-nav">
+        
         @if (SignInManager.IsSignedIn(User))
         {
-            <!--
 
-         <li class="nav-item">
-             <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-         </li>
-         <li class="nav-item">
-             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                 <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-             </form>
-         </li>
-
-        -->
-
-
-
-            <div style="height:60px;" class="col">
-                <a style="display: inline-block" class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="~/img/profile.png" style="width: 50px; height: 50px; " alt="Alternate Text" />
-                </a>
-            </div>
+        <div style="height:60px;" class="col">
+            <a style="display: inline-block" class="nav-link text-white" asp-controller="User" asp-action="Profile">
+                <img src="~/img/profile.png" style="width: 50px; height: 50px; " alt="Alternate Text" />
+            </a>
+        </div>
         }
         else
         {
-            <li class="nav-item">
-                <a class="btn btn-primary" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-            </li>
-            <li class="nav-item">
-                <a class="btn btn-primary" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-            </li>
+        <li class="nav-item">
+            <a class="btn btn-primary" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </li>
+        <li class="nav-item">
+            <a class="btn btn-primary" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
         }
     </ul>
