--- a/PCHUBStore/Views/Home/Index.cshtml
+++ b/PCHUBStore/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
     <div class="row justify-content-center">
 
-        <div class="col-lg-3 col-sm-12 col-md-12" style="min-height: auto; background-color: rebeccapurple;" id="controlPanel">
+        <div class="col-lg-3 col-sm-12 col-md-12" style="background-color: rebeccapurple;" id="controlPanel">
             <!--tuka e admin panela -->
             <ul class="navbar-nav sidebar-dark accordion" id="accordionSidebar">
 
@@ -24,7 +24,7 @@
                 <hr class="sidebar-divider my-0">
 
                 <!-- Nav Item -
-    -->
+                -->
                 <hr class="sidebar-divider">
 
                 <a class="sidebar-brand d-flex align-items-center justify-content-center" style="cursor:pointer">
@@ -80,12 +80,12 @@
         </div>
 
 
-        <div class="col-lg-9 col-sm-12 col-md-12" id="optionsOrSliderParent">
+        <div class="col-lg-9 col-sm-12 col-md-12" style="width: inherit; height: inherit" id="optionsOrSliderParent">
             <!--tuka e slidera ili opciite koito shte budat postaveni -->
             <div class="row align-items-center" id="optionsOrSlider">
                 <div class="col-12 text-center align-items-center" style="display: inherit">
                     <img src="~/img/arrow-circle-left-solid.svg" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
-                    <img src="~/img/option2.jpg" style="width: 100%; height: 100%" alt="Alternate Text" id="mainSlidePic" />
+                    <img src="~/img/option2.jpg" style="width: inherit; height: inherit" alt="Alternate Text" id="mainSlidePic" />
                     <img src="~/img/arrow-circle-right-solid.svg" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
                 </div>
             </div>
@@ -93,3 +93,145 @@
 
     </div>
 </div>
+
+
+<div class="container text-center" style="margin-top: 3em">
+    <div class="row" style="font-size: 25px">
+        <div class="col m-1" style="background-color: red;">
+            <a href="" style="color: white">Acer Laptops</a>
+        </div>
+        <div class="col m-1" style="background-color: yellowgreen;">
+            <a href="" style="color: white">Dell Monitors</a>
+        </div>
+        <div class="col m-1" style="background-color: blueviolet;">
+            <a href="" style="color: white">Alienware</a>
+        </div>
+        <div class="col m-1" style="background-color: deepskyblue;">
+            <a href="" style="color: white">Keyboards</a>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="row justify-content-center" style="margin-top: 40px">
+    <div class="col-lg-5 m-1 col-sm-10">
+        <div class="row bg-white">
+            <div class="col-2">
+                <p style="font-size: 20px; color: black">Laptops</p>
+                <a href="#">All Laptops</a>
+            </div>
+            <div class="col-10 text-right">
+                <div class="row">
+                    <div class="col-lg-6 col-sm-12">
+                        <ul style="list-style: none; font-size: 15px">
+                            <li><a style="color: orangered" href="#">Лаптопи за игри</a></li>
+                            <li><a href="#">RTX 2060 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6 col-sm-12">
+                        <ul style="list-style: none; font-size: 15px">
+                            <li><a style="color: orangered" href="#">Лаптопи за игри</a></li>
+                            <li><a href="#">RTX 2060 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                            <li><a href="#">RTX 2070 Ново !</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 text-center">
+                <a href="#" style="width: inherit">
+                    <img style="width: inherit" src="https://static.plasico.bg/resources/asusgl704-home-min.jpg" alt="Alternate Text" />
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-5 m-1 col-sm-10">
+        <div class="row bg-white">
+            <div class="col-2">
+                <p style="font-size: 20px; color: black">Monitors</p>
+                <a href="#">All Laptops</a>
+            </div>
+            <div class="col-10 text-right">
+                <ul style="list-style: none; font-size: 15px">
+                    <li><a href="#">Лаптопи за игри</a></li>
+                    <li><a href="#">RTX 2060 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                </ul>
+            </div>
+            <div class="col-12 text-center">
+                <a href="#" style="width: inherit">
+                    <img style="width: inherit" src="https://static.plasico.bg/resources/1-2-benq.jpg" alt="Alternate Text" />
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-5 m-1 col-sm-10">
+        <div class="row bg-white">
+            <div class="col-2">
+                <p style="font-size: 20px; color: black">Keyboards</p>
+                <a href="#">All Laptops</a>
+            </div>
+            <div class="col-10 text-right">
+                <ul style="list-style: none; font-size: 15px">
+                    <li><a href="#">Лаптопи за игри</a></li>
+                    <li><a href="#">RTX 2060 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                </ul>
+            </div>
+            <div class="col-12 text-center">
+                <a href="#" style="width: inherit">
+                    <img style="width: inherit" src="https://static.plasico.bg/resources/asusgl704-home-min.jpg" alt="Alternate Text" />
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-5 m-1 col-sm-10">
+        <div class="row bg-white">
+            <div class="col-2">
+                <p style="font-size: 20px; color: black">PC</p>
+                <a href="#">All PCs</a>
+            </div>
+            <div class="col-10 text-right">
+                <ul style="list-style: none; font-size: 15px">
+                    <li><a href="#">Лаптопи за игри</a></li>
+                    <li><a href="#">RTX 2060 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                    <li><a href="#">RTX 2070 Ново !</a></li>
+                </ul>
+            </div>
+            <div class="col-12 text-center">
+                <a href="#" style="width: inherit">
+                    <img style="width: inherit" src="https://static.plasico.bg/resources/assembled-gaming-home.1.1.1.jpg" alt="Alternate Text" />
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
