--- a/PCHUBStore/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/PCHUBStore/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,11 +1,7 @@
 ﻿@page
-@model ResetPasswordModel
+@model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
-}
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+    ViewData["Title"] = "Forgot your password?";
 }
 
 
@@ -20,33 +16,26 @@
                 <div class="card-body p-0">
                     <!-- Nested Row within Card Body -->
                     <div class="row">
-                        <div class="col-lg-6 d-none d-lg-block" style="background: url('/img/resetPasswordImg.png'); background-repeat: no-repeat"></div>
+                        <div class="col-lg-6 d-none d-lg-block" style="background: url('/img/forgotPassword.png'); background-repeat: no-repeat"></div>
                         <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
-                                    <h1 class="h4 text-gray-900 mb-2">Reset Password</h1>
+                                    <h1 class="h4 text-gray-900 mb-2">Forgot Your Password?</h1>
+                                    <p class="mb-4">We get it, stuff happens. Just enter your email address below and we'll send you a link to reset your password!</p>
                                 </div>
                                 <form method="post">
                                     <div asp-validation-summary="All" class="text-danger"></div>
-                                    <input asp-for="Input.Code" type="hidden" />
                                     <div class="form-group">
                                         <label asp-for="Input.Email"></label>
                                         <input asp-for="Input.Email" class="form-control" />
                                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                                     </div>
-                                    <div class="form-group">
-                                        <label asp-for="Input.Password"></label>
-                                        <input asp-for="Input.Password" class="form-control" />
-                                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-group">
-                                        <label asp-for="Input.ConfirmPassword"></label>
-                                        <input asp-for="Input.ConfirmPassword" class="form-control" />
-                                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">Reset</button>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
                                 </form>
                                 <hr>
+                                <div class="text-center">
+                                    <a class="small" asp-area="Identity" asp-page="/Account/Register">Create an Account</a>
+                                </div>
                                 <div class="text-center">
                                     <a class="small" asp-area="Identity" asp-page="/Account/Login">Already have an account? Login!</a>
                                 </div>
@@ -61,3 +50,10 @@
     </div>
 
 </div>
+
+
+
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
