--- a/PCHUBStore/Areas/Identity/Pages/_ValidationScriptsPartial.cshtml
+++ b/PCHUBStore/Areas/Identity/Pages/_ValidationScriptsPartial.cshtml
@@ -15,4 +15,14 @@
             crossorigin="anonymous"
             integrity="sha384-ifv0TYDWxBHzvAk2Z0n8R434FL1Rlv/Av18DXE43N/1rvHyOG4izKst0f2iSLdds">
     </script>
+
+    <!-- Bootstrap core JavaScript-->
+    <script src="~/vendor/jquery/jquery.min.js"></script>
+    <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script src="~/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="~/js/sb-admin-2.min.js"></script>
 </environment>
